traefik/v3.5.3/05-dashboard-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  name: traefik
spec:
  routes:
  - match: Host(`traefik.kubecy.com`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard/`))
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
